Hold authorization cache generation mutex for duration of invalidation

XMLWordPrintableJSON

    • Server Security
    • Fully Compatible
    • ALL
    • v8.0, v7.3, v7.0, v6.0
    • Security 2024-04-01, Security 2024-04-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The authorization cache generation mutex is released after it has been altered. We should hold the mutex for the duration of invalidation.

            Assignee:
            Adrian Gonzalez Montemayor
            Reporter:
            Spencer Jackson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: