SERVER-86482 Hold authorization cache generation mutex for duration of invalidation (#20632)

GitOrigin-RevId: d1ee2fa9ecb41fac074a093fafd375f0890516d1